--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 env:
-  MAIN_PYTHON_VERSION: '3.10'
+  MAIN_PYTHON_VERSION: '3.13'
   MAPDL_DOCKER_PACKAGE: 'ghcr.io/ansys/mapdl'
   MAPDL_DOCKER_VERSION: 'v24.2.0'
   DOCUMENTATION_CNAME: "manager.materials.docs.pyansys.com"
@@ -45,7 +45,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
+  
     steps:
       - name: Build wheelhouse and perform smoke test
         uses: ansys/actions/build-wheelhouse@v9
@@ -61,7 +62,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest]
-        python-version: ['3.10']
+        python-version: ['3.13']
       fail-fast: false
 
     steps:
@@ -133,7 +134,7 @@ jobs:
 
       - name: "Test with tox"
         # Only the tox environment specified in the tox.ini gh-actions is run
-        run: tox -e py310-coverage -- -m mapdl_integration
+        run: tox -e py313-coverage -- -m mapdl_integration
 
       - name: "Collect MAPDL logs on failure"
         if: always()
