--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 description = Default tox environments list
 envlist =
-    style,{py310,py311,py312}{,-coverage},doc
+    style,{py310,py311,py312,py313}{,-coverage},doc
 skip_missing_interpreters = true
 isolated_build = true
 
@@ -11,6 +11,7 @@ python =
     3.10: style,py310-coverage,doc
     3.11: style,py311-coverage,doc
     3.12: style,py312-coverage,doc
+    3.13: style,py313-coverage,doc
 
 [testenv]
 description = Checks for project unit tests and coverage (if desired)
@@ -18,6 +19,7 @@ basepython =
     py310: python3.10
     py311: python3.11
     py312: python3.12
+    py313: python3.13
     py: python3{style,reformat,doc}: python3
 skip_install = true
 allowlist_externals =
