--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,13 @@ envlist =
 skip_missing_interpreters = true
 isolated_build = true
 
+[gh-actions]
+python =
+    3.10: tests310
+    3.11: tests311
+    3.12: tests312
+    3.13: tests313
+
 [testenv]
 description = Checks for project unit tests and coverage (if desired)
 basepython =
@@ -12,7 +19,7 @@ basepython =
     tests311: python3.11
     tests312: python3.12
     tests313: python3.13
-    {style,reformat,doc}: python3
+    {tests,style,reformat,doc}: python3
 skip_install = true
 allowlist_externals =
     poetry
