--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -46,7 +46,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         python-version: ['3.10', '3.11', '3.12', '3.13']
-  
     steps:
       - name: Build wheelhouse and perform smoke test
         uses: ansys/actions/build-wheelhouse@v9
@@ -228,11 +227,19 @@ jobs:
       id-token: write
       contents: write
     steps:
-      - name: Release to the public PyPI repository
-        uses: ansys/actions/release-pypi-public@v9
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          use-trusted-publisher: true
+    - name: "Download the library artifacts from build-library step"
+      uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e # v4.2.1
+      with:
+        name: ${{ env.PACKAGE_NAME }}-artifacts
+        path: ${{ env.PACKAGE_NAME }}-artifacts
+
+    - name: "Upload artifacts to PyPI using trusted publisher"
+      uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
+      with:
+        repository-url: "https://upload.pypi.org/legacy/"
+        print-hash: true
+        packages-dir: ${{ env.PACKAGE_NAME }}-artifacts
+        skip-existing: false
 
   upload_docs_release:
     name: "Upload release documentation"
