Fix integration and fiddle with envs

--- a/tox.ini
+++ b/tox.ini
@@ -12,14 +12,13 @@ python =
     3.12: tests312
     3.13: tests313
 
-[testenv]
+[testenv:tests]
 description = Checks for project unit tests and coverage (if desired)
 basepython =
     tests310: python3.10
     tests311: python3.11
     tests312: python3.12
     tests313: python3.13
-    {tests,style,reformat,doc}: python3
 skip_install = true
 allowlist_externals =
     poetry
