--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,18 @@
 [tox]
 description = Default tox environments list
 envlist =
-    style,tests,tests{310,311,312,313},doc
+    style,tests,doc
 skip_missing_interpreters = true
 isolated_build = true
 
-[gh-actions]
-python =
-    3.10: tests310
-    3.11: tests311
-    3.12: tests312
-    3.13: tests313
-
-[testenv:tests]
+[testenv]
 description = Checks for project unit tests and coverage (if desired)
 basepython =
     tests310: python3.10
     tests311: python3.11
     tests312: python3.12
     tests313: python3.13
+    {style,tests,doc}: python3
 skip_install = true
 allowlist_externals =
     poetry
