--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 env:
-  MAIN_PYTHON_VERSION: '3.10'
+  MAIN_PYTHON_VERSION: '3.13'
   MAPDL_DOCKER_PACKAGE: 'ghcr.io/ansys/mapdl'
   MAPDL_DOCKER_VERSION: 'v24.2.0'
   DOCUMENTATION_CNAME: "manager.materials.docs.pyansys.com"
@@ -45,7 +45,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
     steps:
       - name: Build wheelhouse and perform smoke test
         uses: ansys/actions/build-wheelhouse@v9
@@ -61,7 +61,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest]
-        python-version: ['3.10']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
       fail-fast: false
 
     steps:
@@ -77,8 +77,7 @@ jobs:
           python -m pip install --upgrade pip poetry tox tox-gh-actions
 
       - name: Test with tox
-        # Only the tox environment specified in the tox.ini gh-actions is run
-        run: tox -e py310-coverage
+        run: tox -e tests
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v5
@@ -133,7 +132,7 @@ jobs:
 
       - name: "Test with tox"
         # Only the tox environment specified in the tox.ini gh-actions is run
-        run: tox -e py310-coverage -- -m mapdl_integration
+        run: tox -e tests -- -m mapdl_integration
 
       - name: "Collect MAPDL logs on failure"
         if: always()
@@ -228,11 +227,19 @@ jobs:
       id-token: write
       contents: write
     steps:
-      - name: Release to the public PyPI repository
-        uses: ansys/actions/release-pypi-public@v9
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          use-trusted-publisher: true
+    - name: "Download the library artifacts from build-library step"
+      uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e # v4.2.1
+      with:
+        name: ${{ env.PACKAGE_NAME }}-artifacts
+        path: ${{ env.PACKAGE_NAME }}-artifacts
+
+    - name: "Upload artifacts to PyPI using trusted publisher"
+      uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
+      with:
+        repository-url: "https://upload.pypi.org/legacy/"
+        print-hash: true
+        packages-dir: ${{ env.PACKAGE_NAME }}-artifacts
+        skip-existing: false
 
   upload_docs_release:
     name: "Upload release documentation"
