--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,11 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
+python = ">=3.10,<3.14"
 numpy = "^2.0"
 
 [tool.poetry.group.doc.dependencies]
-ansys-sphinx-theme = ">=0.12,<1.5"
+ansys-sphinx-theme = ">=0.12"
 numpydoc = "^1.6.0"
 Sphinx = ">=7.2,<9.0"
 sphinx-autoapi = "^3.0"
@@ -39,11 +39,11 @@ sphinx-design = "^0.6.0"
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3,<9.0"
 coolprop = "^6.4.1"
-ansys-mapdl-core = ">=0.68,<0.70"
-ansys-fluent-core = ">=0.28,<0.31"
-twine = ">=4.0.2,<7.0.0"
-pytest-cov = ">=4,<7"
-pre-commit = ">=3.2.2,<5.0.0"
+ansys-mapdl-core = ">=0.68"
+ansys-fluent-core = ">=0.28"
+twine = ">=4.0.2"
+pytest-cov = ">=4"
+pre-commit = ">=3.2.2"
 
 [tool.black]
 line-length = 100
