--- a/tox.ini
+++ b/tox.ini
@@ -1,31 +1,25 @@
 [tox]
 description = Default tox environments list
 envlist =
-    style,{py310,py311,py312}{,-coverage},doc
+    style,tests,doc
 skip_missing_interpreters = true
 isolated_build = true
-
-[gh-actions]
-description = The tox environment to be executed in gh-actions for a given python version
-python =
-    3.10: style,py310-coverage,doc
-    3.11: style,py311-coverage,doc
-    3.12: style,py312-coverage,doc
 
 [testenv]
 description = Checks for project unit tests and coverage (if desired)
 basepython =
-    py310: python3.10
-    py311: python3.11
-    py312: python3.12
-    py: python3{style,reformat,doc}: python3
+    tests310: python3.10
+    tests311: python3.11
+    tests312: python3.12
+    tests313: python3.13
+    {style,tests,doc}: python3
 skip_install = true
 allowlist_externals =
     poetry
 setenv =
     PYTHONUNBUFFERED = yes
     PYTHONUTF8 = 1
-    coverage: PYTEST_EXTRA_ARGS = --cov=ansys.materials --cov-report=term --cov-report=xml --cov-report=html
+    PYTEST_EXTRA_ARGS = --cov=ansys.materials --cov-report=term --cov-report=xml --cov-report=html
 commands =
     poetry install
     poetry run pytest {env:PYTEST_MARKERS:} {env:PYTEST_EXTRA_ARGS:} {posargs:-vv}
