--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -175,6 +175,8 @@ jobs:
     steps:
       - name: "Run Ansys documentation building action"
         uses: ansys/actions/doc-build@v10
+        with:
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   build:
     name: Build library
