--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ twine = ">=4.0.2"
 pytest-cov = ">=4"
 pre-commit = ">=3.2.2"
 pydantic = ">=2.7.0"
-ansys-units = { git = "https://github.com/ansys/pyansys-units.git", branch = "main" }
+ansys-units = ">=0.8.dev0"
 
 [tool.black]
 line-length = 100
