--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -192,7 +192,7 @@ jobs:
 
       - name: Install dependencies and build the library
         run: |
-          python -m pip install --upgrade pip poetry
+          python -m pip install --upgrade pip 'poetry>=1.2.0'
           poetry install --with doc
           poetry build
           poetry run twine check dist/*
