--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -193,7 +193,7 @@ jobs:
       - name: Install dependencies and build the library
         run: |
           python -m pip install --upgrade pip poetry
-          poetry install --all-extras
+          poetry install
           poetry build
           poetry run twine check dist/*
 
