--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -179,6 +179,7 @@ jobs:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
           optional-dependencies-name: ""
           group-dependencies-name: "doc"
+          sphinxopts: -j auto --keep-going
 
   build:
     name: Build library
