--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ pytest-cov = ">=4"
 pre-commit = ">=3.2.2"
 pydantic = ">=2.7.0"
 ansys-units = ">=0.8.dev0"
+ansys-dyna-core = ">=0.9.0"
 
 [tool.black]
 line-length = 100
