--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -128,7 +128,19 @@ jobs:
               -p 50055:50055 \
               $MAPDL_IMAGE \
               -smp -np 2 > log.txt &
-          grep -q 'Server listening on' <(timeout 60 tail -f log.txt)
+          # Wait for MAPDL to start by checking the log file every second for up to 60 seconds
+          for i in {1..60}; do
+            if tail -n 10 log.txt | grep -q 'Server listening on'; then
+              echo "MAPDL server started."
+              break
+            fi
+            sleep 1
+          done
+          if ! tail -n 10 log.txt | grep -q 'Server listening on'; then
+            echo "MAPDL server did not start within 60 seconds. Log output:" >&2
+            cat log.txt >&2
+            exit 1
+          fi
 
       - name: "Test with tox"
         # Only the tox environment specified in the tox.ini gh-actions is run
