--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -127,7 +127,7 @@ jobs:
               -p 50052:50052 \
               -p 50055:50055 \
               $MAPDL_IMAGE \
-              -smp -np 2 | tee log.txt &
+              -smp -np 2 -transport insecure | tee log.txt &
           # Wait for MAPDL to start by checking the log file every second for up to 60 seconds
           for i in {1..60}; do
             if tail -n 10 log.txt | grep -q 'Server listening on'; then
