--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -125,9 +125,7 @@ jobs:
               -p 50055:50055 \
               --entrypoint /bin/bash \
               $MAPDL_IMAGE \
-              ansysgrpc -smp -np 2 -transport insecure -allowremote true
-
-          # | tee log.txt &
+              ansysgrpc -smp -np 2 -transport insecure -allowremote true | tee log.txt &
           # Wait for MAPDL to start by checking the log file every second for up to 60 seconds
           for i in {1..60}; do
             if tail -n 10 log.txt | grep -q 'Server listening on'; then
