--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ allowlist_externals =
 setenv =
     PYTHONUNBUFFERED = yes
     PYTHONUTF8 = 1
+    PYMAPDL_GRPC_TRANSPORT = insecure
     PYTEST_EXTRA_ARGS = --cov=ansys.materials --cov-report=term --cov-report=xml --cov-report=html
 commands =
     poetry install
