--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -110,25 +110,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: "Start MAPDL"
-        run: |
-          MAPDL_IMAGE="${{ env.MAPDL_DOCKER_PACKAGE }}:${{ env.MAPDL_DOCKER_VERSION }}"
-          docker pull $MAPDL_IMAGE
-          docker run \
-              --name mapdl \
-              --restart always \
-              --health-cmd="ps aux | grep \"[/]ansys_inc/.*ansys\.e.*grpc\" -q && echo 0 || echo 1" \
-              --health-interval=0.5s \
-              --health-retries=4 \
-              --health-timeout=0.5s \
-              --health-start-period=10s \
-              -e ANSYSLMD_LICENSE_FILE=1055@${{ secrets.LICENSE_SERVER }} \
-              -e ANSYS_LOCK="OFF" \
-              -p 50052:50052 \
-              -p 50055:50055 \
-              $MAPDL_IMAGE \
-              -smp -np 2 > log.txt &
-          grep -q 'Server listening on' <(timeout 60 tail -f log.txt)
+      - name: "Launch first MAPDL instance using action"
+        id: mapdl_0
+        uses: ./.github/actions/launch-mapdl-docker
+        with:
+          mapdl-version: 24.2
+          mapdl-image: ${{ env.MAPDL_DOCKER_PACKAGE }}:${{ env.MAPDL_DOCKER_VERSION }}
+          license-server: ${{ secrets.LICENSE_SERVER }}
+          pymapdl-port: 50052
 
       - name: "Test with tox"
         # Only the tox environment specified in the tox.ini gh-actions is run
